force-app/main/default/objects/Use_Case__c/Use_Case__c.object-meta.xml
<CustomObject>
    <description>Identifies details of use cases for one or more detailed requirements</description>
    <label>Use Case</label>
    <nameField>
        <label>Use Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Use Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>