force-app/main/default/objects/Use_Case__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Identify the actors in this use case</description>
    <label>Actors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>