force-app/main/default/objects/Use_Case__c/fields/Alternate_Flow__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Flow__c</fullName>
    <description>Identify any alternate flow of events for this use case</description>
    <label>Alternate Flow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>