force-app/main/default/objects/Use_Case__c/fields/Basic_Flow_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Basic_Flow_of_Events__c</fullName>
    <description>List the basic flow of events for this use case</description>
    <label>Basic Flow of Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>