force-app/main/default/objects/Use_Case__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <description>Include a brief description of the use case</description>
    <label>Brief Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>