force-app/main/default/objects/Use_Case__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Use Cases</relationshipLabel>
    <relationshipName>Use_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>