force-app/main/default/objects/Use_Case__c/fields/Detailed_Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement_Name__c</fullName>
    <formula>Detailed_Requirement__r.Requirement_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detailed Requirement Name</label>
    <type>Text</type>
</CustomField>