force-app/main/default/objects/Use_Case__c/fields/High_Level_Requirement__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Requirement__c</fullName>
    <formula>Detailed_Requirement__r.High_Level_Requirement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Level Requirement</label>
    <type>Text</type>
</CustomField>