force-app/main/default/objects/Use_Case__c/fields/Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Open_Issues__c</fullName>
    <description>Identify any open issues associated with this use case</description>
    <label>Open Issues</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>