force-app/main/default/objects/Use_Case__c/fields/Parent_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Use Cases</relationshipLabel>
    <relationshipName>Use_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>