force-app/main/default/objects/Use_Case__c/fields/Post_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Post_Conditions__c</fullName>
    <description>Identify the post-conditions for this use case, including any failed condition</description>
    <label>Post-Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>