force-app/main/default/objects/Use_Case__c/fields/Pre_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Conditions__c</fullName>
    <description>Identify the Pre-Conditions for this use case</description>
    <label>Pre-Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>