force-app/main/default/objects/Use_Case__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>Detailed_Requirement__r.High_Level_Requirement__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>