force-app/main/default/objects/Use_Case__c/fields/Special_Requirements_and_Rules__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_and_Rules__c</fullName>
    <description>Identify any special requirements or rules for this use case</description>
    <label>Special Requirements and Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>